pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constSubclass.pkl
open class Foo {
  const x: Int
}

class Bar extends Foo {
  x = 2
}

bar = new Bar {}
